<resources>
    <string name="app_name">PG SDK Sample App</string>
    <string name="display_connected">Display connected</string>
    <string name="display_disconnected">Display disconnected</string>
    <string name="display_v1_commands">Display V1 Actions</string>
    <string name="display_v2_commands">Display V2 Actions</string>
    <string name="display_not_connected">Display not connected</string>
    <string name="not_a_display_device">Not a display device</string>
    <string name="display_type_v1">Display type V1</string>
    <string name="display_type_v2">Display type V2</string>
    <string name="service_connected">service connected</string>
    <string name="service_connecting">connecting…</string>
    <string name="connect_service">connect service</string>
    <string name="pair_scanner">Pair scanner</string>
    <string name="barcode_output_default">…</string>
    <string name="barcode_symbology">Barcode Symbology:</string>
    <string name="barcode_content">Barcode Content:</string>
    <string name="screen_context">Screen Context:</string>
    <string name="service_connection_lbl">Service Connection:</string>
    <string name="pair_from_pinned_activity">Pair from pinned Activity</string>
    <string name="feedback_id_1">Success</string>
    <string name="feedback_id_2">Error</string>
    <string name="feedback_id_3">Info</string>
    <string name="feedback_text_hint">feedback text</string>
    <string name="worker_feedback">Worker Feedback</string>
    <string name="trigger_feedback_button">Trigger Feedback</string>
    <string name="display_connection_state_label">Display connection state</string>
    <string name="display_state_unknown">Display state unknown</string>
    <string name="disconnect_display">Disconnect Display</string>
    <string name="get_display_device_type">Get Display Device Type</string>
    <string name="display_type_label">Display Device Type</string>
    <string name="display_type_unknown">Display type unknown</string>
    <string name="get_display_state">Get Display State</string>
    <string name="send_screen">Send test screen to Display</string>
    <string name="send_partial_refresh_screen">Send partial refresh test screen to Display</string>
    <string name="send_notification_screen">Send notification test screen to Display</string>
    <string name="send_pg1_screen">Send PG1 test screen to Display</string>
    <string name="send_pg1a_screen">Send PG1A test screen to Display</string>
    <string name="send_pg3_screen_with_right_headers">Send PG3 test screen with right headers to Display</string>
    <string name="send_screen_failing">Send an erroneous test screen to Display</string>
    <string name="device_name_hint">Device name</string>
    <string name="take_image_button">take image</string>
    <string name="image_configurations">Image Configurations</string>
    <string name="resolution_high">1280x960</string>
    <string name="resolution_medium">640x480</string>
    <string name="resolution_low">320x240</string>
    <string name="image_quality_text">quality</string>
    <string name="timeout_text">timeout ms</string>
    <string name="image_will_appear_here">image will appear here</string>
    <string name="use_default_scan_feedback">Use Default Scan Feedback</string>
    <string name="send_with_replace_queue">Send feedback with replaceQueue?</string>
    <string name="pick_display_orientation">Pick display orientation</string>
    <string name="send_PgNtfT5_test_screen">Send PgNtfT5 Test screen to display</string>
    <string name="send_PgWork3Btn2T1_test_screen">Send PgWork3Btn2T1 Test screen to display</string>
    <string name="send_PgListT1_test_screen">Send PgListT1 Test screen to display</string>
    <string name="send_timer_test_screen">Send Test screen with 2s timeout to display</string>
    <string name="refresh_config_profiles">Refresh config profiles</string>
    <string name="change_profile">Change profile:</string>
    <string name="custom_profile">Profile 1</string>
    <string name="profile_active">Active</string>
    <string name="last_response_status">last response</string>
    <string name="feedback_success">feedback success</string>
    <string name="scanner_config_success">scanner config success</string>
    <string name="set_screen_success">set screen success</string>
    <string name="image_success">image success</string>
    <string name="change_profile_success">change profile success</string>
    <string name="get_profiles_success">get profiles success</string>
    <string name="block_trigger_label">Block trigger(s):</string>
    <string name="trigger_block">Block</string>
    <string name="trigger_block_all">Block All For 10 Sec</string>
    <string name="trigger_unblock">Unblock</string>
    <string name="block_trigger_success">block trigger success</string>
    <string name="unblock_trigger_success">unblock trigger success</string>
    <string name="showDeviceVisibilityInfo">Device Visibility Info</string>
    <string name="device_visibility_alert_title">Device Visibility</string>
    <string name="device_visibility_alert_content">Serial number: %1$s\nFirmware revision: %2$s\nBattery level: %3$d\nBce revision: %4$s\nModel number: %5$s\nManufacturer: %6$s\nApp version: %7$s\n</string>
    <string name="device_visibility_alert_content_error">Error: %1$s</string>
    <string name="update_goals_button">update goals</string>
    <string name="set_activity_goals_header">Set Activity Goals</string>
    <string name="total_steps_goal_hint">Total steps</string>
    <string name="total_scans_goal_hint">Total scans</string>
    <string name="average_scantime_goal_hint">Average scantime</string>
    <string name="disconnect_scanner">Disconnect scanner</string>
    <string name="version">Version</string>

</resources>
