<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SdkActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pairNormalLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/pair_scanner_regular"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/connectScannerRegularBtn"
            app:layout_constraintEnd_toStartOf="@+id/connectScannerRegularBtn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/connectScannerRegularBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="@string/connect_scanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceConnectBtn" />

        <TextView
            android:id="@+id/lastScannedLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="@string/last_scanned_text"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/symbologyLabel" />

        <TextView
            android:id="@+id/symbologyLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_huge"
            android:text="@string/symbology_label_text"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connectScannerPinnedBtn" />

        <TextView
            android:id="@+id/symbologyResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_huge"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="@string/barcode_output_default"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connectScannerPinnedBtn" />

        <TextView
            android:id="@+id/inputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/barcode_output_default"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastScannedLabel"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/serviceConnectBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="@string/connect_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/serviceConnectionLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/service_connection_lbl"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/serviceConnectBtn"
            app:layout_constraintEnd_toStartOf="@+id/serviceConnectBtn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/pairFromPinnedActivityLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/pair_from_pinned_activity"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/connectScannerPinnedBtn"
            app:layout_constraintEnd_toStartOf="@+id/connectScannerRegularBtn"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/connectScannerPinnedBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="@string/connect_scanner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connectScannerRegularBtn" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/connectScannerBtnGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/feedBackLayout"
            layout="@layout/feedback_selection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedbackTitleTw" />

        <TextView
            android:id="@+id/lastResponseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_response_status"
            android:layout_margin="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blockTriggerButton" />

        <TextView
            android:id="@+id/lastResponseValue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            app:layout_constraintStart_toEndOf="@+id/lastResponseLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blockTriggerButton" />


        <include
            android:id="@+id/takeImageLayout"
            layout="@layout/take_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastResponseLabel" />


        <Switch
            android:id="@+id/defaultFeedbackSwitch"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:checked="true"
            android:text="@string/use_default_scan_feedback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedBackLayout" />

        <Switch
            android:id="@+id/sendFeedbackWithReplaceQueueSwitch"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:checked="false"
            android:text="@string/send_with_replace_queue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/defaultFeedbackSwitch" />

        <include
            android:id="@+id/profilesLayout"
            layout="@layout/profiles_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendFeedbackWithReplaceQueueSwitch" />

        <TextView
            android:id="@+id/blockTriggerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/block_trigger_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilesLayout" />

        <Button
            android:id="@+id/blockTriggerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/trigger_block"
            app:layout_constraintTop_toBottomOf="@+id/blockTriggerLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/unblockTriggerButton"/>

        <Button
            android:id="@+id/unblockTriggerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="@string/trigger_unblock"
            app:layout_constraintTop_toBottomOf="@+id/blockTriggerLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/blockTriggerButton"/>


        <TextView
            android:id="@+id/displayStateLabel"
            android:text="@string/display_connection_state_label"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/takeImageLayout" />

        <TextView
            android:id="@+id/displayStateOutput"
            android:text="@string/display_state_unknown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/displayStateLabel"
            app:layout_constraintBottom_toBottomOf="@+id/displayStateLabel" />

        <Button
            android:id="@+id/disconnectDisplayBtn"
            android:text="@string/disconnect_display"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@+id/displayStateLabel" />

        <Button
            android:id="@+id/getDisplayState"
            android:text="@string/get_display_state"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disconnectDisplayBtn" />

        <Button
            android:id="@+id/sendTestScreenBtn"
            android:text="@string/send_screen"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getDisplayState" />

        <Button
            android:id="@+id/sendPartialRefreshTestScreenBtn"
            android:text="@string/send_partial_refresh_screen"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendTestScreenBtn" />

        <Button
            android:id="@+id/sendNotificationTestScreenBtn"
            android:text="@string/send_notification_screen"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendPartialRefreshTestScreenBtn" />

        <Button
            android:id="@+id/sendPg1TestScreenBtn"
            android:text="@string/send_pg1_screen"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendNotificationTestScreenBtn" />

        <Button
            android:id="@+id/sendPg1ATestScreenBtn"
            android:text="@string/send_pg1a_screen"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendPg1TestScreenBtn" />

        <Button
            android:id="@+id/sendTestScreenBtnFailing"
            android:text="@string/send_screen_failing"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendPg1ATestScreenBtn" />

        <TextView
            android:id="@+id/feedbackTitleTw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="Worker Feedback"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputField" />

        <Button
            android:id="@+id/pickDisplayOrientationDialogBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:text="@string/pick_display_orientation"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendTestScreenBtnFailing" />

        <Button
            android:id="@+id/deviceVisibilityBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:text="@string/showDeviceVisibilityInfo"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickDisplayOrientationDialogBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>